# medit

./: .editorconfig  .gitignore  Makefile  readme.md  requirements.in  requirements.txt
medit_rs/: Cargo.toml  pyproject.toml  test.py
medit_rs/src/: lib.rs
tests/: conftest.py  test_binary.py
