[package]
name = "medit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "medit_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
process-memory = "0.5.0"
proc-maps = "0.3.0"
libproc = "0.12.0"
scanflow = "0.1.1"
