[package]
name = "medit_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "medit_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
#process-memory = "0.5.0"
proc-maps = "0.3.0"
#libproc = "0.12.0"
scanflow = "0.2.0-beta"
#memflow = "0.1.3"
#proc-macro-crate = "=1.1.3"
#proc-macro2 = "=1.0.40"

#cc = "=1.0.73"
#bumpalo = "=3.10.0"
memflow = { version = "^0.2.0-beta8" }
memflow-native = "0.2.0-beta7"

[features]
default = []
plugins = []
